gfile: Fallback to local path for unknown schemes

g_file_new_for_cmd_path() doesn't handle files with colons ideally:

$ touch foo:bar
$ gio info foo:bar
gio: foo:///bar: The specified location is not supported

Just a note that "./foo:bar", "~/foo:bar" or "file:///foo:bar" works
properly. With this patch, the file info is shown even for "foo:bar"
when "foo" isn't supported scheme.

Side-effect of this patch is that operations will fail with "No such
file or directory" if the local file doesn't exist as well instead of
"The specified location is not supported" (ie. with G_IO_ERROR_NOT_FOUND
instead of G_IO_ERROR_NOT_SUPPORTED)...

https://gitlab.gnome.org/GNOME/glib/issues/1623